--- a/post/software/00_linux/kubernetes/00_k8s 安装教程.md
+++ b/post/software/00_linux/kubernetes/00_k8s 安装教程.md
@@ -210,8 +210,9 @@ hostnamectl set-hostname k8s-master
 kubeadm init --pod-network-cidr=192.168.0.0/16
 ```
 安装成功之后，需要配置admin.conf,安装成功结尾处也会提示如何配置，同时需要保存输出最后一行的 join 命令
-![](../../../images/k8s_00-kubeadm-init.png)
+![](E:\hugo_blog\images\k8s_00-kubeadm-init.png)
 有两种方法可以配置 admin.config
+
 * 非 root 用户
 
   ```shell
@@ -219,7 +220,7 @@ kubeadm init --pod-network-cidr=192.168.0.0/16
   mkdir -p $HOME/.kube
   sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
   sudo chown $(id -u):$(id -g) $HOME/.kube/config
-
+  
   ```
 * root 用户
   ```shell
