--- a/content/post/software/kubernetes/00_k8s 安装教程.md
+++ b/content/post/software/kubernetes/00_k8s 安装教程.md
@@ -1,8 +1,8 @@
 ---
 title:  centos7 离线安装 kubernets (k8s)
 date: 2022-04-23 15:07:32
-categories: ['']
-tags: ['', '', '']
+categories: ['software']
+tags: ['k8s', '云存储']
 draft: false
 
 ---
